# viam-mh-sr602-module

./: .env  .gitignore  CONVERSION_COMPLETE.md  DEPLOYMENT_GUIDE.md  LICENSE  MH-SR602.py  Makefile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  VERSION_GUIDE.md  VERSION_GUIDE_NEW.md  VIAM_UPLOAD.md  config.example.json  meta.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: deploy.yml
src/: MH_SR602.py  __init__.py  __main__.py  main.py  mh_sr602.py  motion_sensor.py
